--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
@@ -21,7 +21,7 @@
           <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
             <div class="col-10 col-sm-8 col-lg-6">
               <img
-                src="./images/iphone.png"
+                src="./iphone.png"
                 class="d-block mx-lg-auto img-fluid"
                 alt="Bootstrap Themes"
                 height="200"
@@ -238,7 +238,7 @@
             </h2>
             <img
               class="profile-img mt-5 mb-2"
-              src="./images/dog-img.jpg"
+              src="./dog-img.jpg"
               alt="dog image"
             />
             <p class="col-lg-8 mx-auto lead">Pebbles, New York</p>
@@ -247,27 +247,27 @@
             <div class="row">
               <div class="col-lg-3 col-sm-12">
                 <img
-                  src="./images/techcrunch.png"
-                  alt="tech chrunch"
+                  src="./techcrunch.png"
+                  alt="tech crunch"
                   height="30"
                 />
               </div>
               <div class="col-lg-3 col-sm-12">
                 <img
-                  src="./images/bizinsider.png"
-                  alt="tech chrunch"
+                  src="./bizinsider.png"
+                  alt="bixinsider"
                   height="30"
                 />
               </div>
               <div class="col-lg-3 col-sm-12">
                 <img
-                  src="./images/mashable.png"
-                  alt="tech chrunch"
+                  src="./mashable.png"
+                  alt="mashable"
                   height="30"
                 />
               </div>
               <div class="col-lg-3 col-sm-12">
-                <img src="./images/tnw.png" alt="tech chrunch" height="30" />
+                <img src="./tnw.png" alt="tnw" height="30" />
               </div>
             </div>
           </div>
